<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>me.bill</groupId>
    <artifactId>fpp</artifactId>
    <version>1.5.4</version>
    <packaging>jar</packaging>

    <name>fpp</name>

    <properties>
        <java.version>21</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <!-- Server plugins folder — override with -Ddeploy.dir=... or edit here -->
        <deploy.dir>${user.home}/Desktop/dmc/plugins</deploy.dir>
        <!-- Set to true to skip ProGuard obfuscation and deploy non-obfuscated jar -->
        <skip.proguard>false</skip.proguard>
    </properties>

    <build>
        <defaultGoal>clean package</defaultGoal>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <release>21</release>
                    <showDeprecation>true</showDeprecation>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.5.3</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <minimizeJar>false</minimizeJar>
                            <createDependencyReducedPom>false</createDependencyReducedPom>
                            <artifactSet>
                                <includes>
                                    <include>org.xerial:sqlite-jdbc</include>
                                    <include>com.mysql:mysql-connector-j</include>
                                    <!-- FastStats is NOT shaded — it is bundled as raw jar resources
                                         (src/main/resources/faststats/) and loaded via URLClassLoader
                                         at runtime to avoid shade-relocation class-loading issues. -->
                                </includes>
                            </artifactSet>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>3.1.0</version>
                <executions>
                    <execution>
                        <id>proguard-obfuscation</id>
                        <phase>package</phase>
                        <goals>
                            <goal>exec</goal>
                        </goals>
                        <configuration>
                            <skip>${skip.proguard}</skip>
                            <executable>java</executable>
                            <arguments>
                                <argument>-jar</argument>
                                <argument>${basedir}/libs/proguard/proguard.jar</argument>
                                <argument>@${basedir}/libs/proguard/fpp.conf</argument>
                                <argument>-injars</argument>
                                <argument>${project.build.directory}/${project.build.finalName}.jar</argument>
                                <argument>-outjars</argument>
                                <argument>${project.build.directory}/${project.build.finalName}-obfuscated.jar</argument>
                            </arguments>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <!-- Auto-deploy: copy obfuscated JAR to server plugins folder after ProGuard -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-antrun-plugin</artifactId>
                <version>3.1.0</version>
                <executions>
                    <execution>
                        <id>deploy-obfuscated-jar</id>
                        <phase>package</phase>
                        <goals>
                            <goal>run</goal>
                        </goals>
                        <configuration>
                            <target>
                                <mkdir dir="${deploy.dir}" />
                                <!-- Primary: deploy obfuscated jar (produced by ProGuard) -->
                                <copy
                                    file="${project.build.directory}/${project.build.finalName}-obfuscated.jar"
                                    tofile="${deploy.dir}/fpp.jar"
                                    overwrite="true"
                                    failonerror="false" />
                                <!-- Fallback: deploy non-obfuscated jar when ProGuard is skipped/missing -->
                                <copy
                                    file="${project.build.directory}/${project.build.finalName}.jar"
                                    tofile="${deploy.dir}/fpp.jar"
                                    overwrite="false"
                                    failonerror="false" />
                                <echo message="[FPP] Deployed JAR to: ${deploy.dir}/fpp.jar" />
                            </target>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
        <resources>
            <!-- Regular resources: YAML, properties, etc. — text filtering enabled -->
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
                <excludes>
                    <!-- Binary jar files must NOT be text-filtered -->
                    <exclude>faststats/**</exclude>
                </excludes>
            </resource>
            <!-- FastStats bundled jars — binary, no filtering -->
            <resource>
                <directory>src/main/resources</directory>
                <filtering>false</filtering>
                <includes>
                    <include>faststats/**</include>
                </includes>
            </resource>
        </resources>
    </build>

    <repositories>
        <repository>
            <id>papermc-repo</id>
            <url>https://repo.papermc.io/repository/maven-public/</url>
        </repository>
        <repository>
            <id>central</id>
            <url>https://repo.maven.apache.org/maven2</url>
        </repository>
        <repository>
            <id>placeholderapi-repo</id>
            <url>https://repo.extendedclip.com/content/repositories/placeholderapi/</url>
        </repository>
        <repository>
            <id>faststats-releases</id>
            <url>https://repo.faststats.dev/releases</url>
        </repository>
        <repository>
            <id>guardsquare</id>
            <url>https://repository.guardsquare.com/content/repositories/releases</url>
        </repository>
    </repositories>

    <pluginRepositories>
        <pluginRepository>
            <id>guardsquare</id>
            <url>https://repository.guardsquare.com/content/repositories/releases</url>
        </pluginRepository>
    </pluginRepositories>

    <dependencies>
        <!-- Paper public API — the only compile-time dependency needed -->
        <dependency>
            <groupId>io.papermc.paper</groupId>
            <artifactId>paper-api</artifactId>
            <version>1.21.11-R0.1-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>

        <!-- Netty — bundled with Paper, needed at compile time for network classes -->
        <dependency>
            <groupId>io.netty</groupId>
            <artifactId>netty-all</artifactId>
            <version>4.1.97.Final</version>
            <scope>provided</scope>
        </dependency>

        <!-- True Mojang-mapped server JAR — needed for FakeServerGamePacketListenerImpl
             which extends ServerGamePacketListenerImpl with proper Mojang class+method names.
             This JAR is already installed in the local Maven repo.
             NOTE: paper-mojmap was removed because it has Spigot-obfuscated methods that
             shadow Entity/ServerCommonPacketListenerImpl from this JAR on the classpath. -->
        <dependency>
            <groupId>io.papermc.paper</groupId>
            <artifactId>paper-server</artifactId>
            <version>1.21.11-R0.1-SNAPSHOT</version>
            <classifier>mojang-mapped</classifier>
            <scope>provided</scope>
        </dependency>

        <!-- SQLite JDBC — shaded in for local database fallback -->
        <dependency>
            <groupId>org.xerial</groupId>
            <artifactId>sqlite-jdbc</artifactId>
            <version>3.47.1.0</version>
            <scope>compile</scope>
        </dependency>

        <!-- MySQL Connector — provided by the server or shaded in as fallback -->
        <!-- If your server doesn't bundle it, change scope to compile -->
        <dependency>
            <groupId>com.mysql</groupId>
            <artifactId>mysql-connector-j</artifactId>
            <version>8.3.0</version>
            <scope>compile</scope>
            <exclusions>
                <!-- Exclude protobuf to avoid conflicts -->
                <exclusion>
                    <groupId>com.google.protobuf</groupId>
                    <artifactId>protobuf-java</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <!-- LuckPerms API (provided by the server at runtime) -->
        <dependency>
            <groupId>net.luckperms</groupId>
            <artifactId>api</artifactId>
            <version>5.5</version>
            <scope>provided</scope>
        </dependency>

        <!-- PlaceholderAPI — soft optional; provided by server/plugin environment -->
        <dependency>
            <groupId>me.clip</groupId>
            <artifactId>placeholderapi</artifactId>
            <version>2.11.6</version>
            <scope>provided</scope>
        </dependency>

        <!-- FastStats — anonymous usage analytics (shaded + relocated) -->
        <dependency>
            <groupId>dev.faststats.metrics</groupId>
            <artifactId>bukkit</artifactId>
            <version>0.18.1</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>dev.faststats.metrics</groupId>
            <artifactId>core</artifactId>
            <version>0.18.1</version>
            <scope>compile</scope>
        </dependency>
        <!-- Explicitly add safe version to override vulnerable transitive dependency -->
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>3.18.0</version>
        </dependency>
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>2.13.2</version>
            <scope>provided</scope>
        </dependency>
    </dependencies>
</project>
